k8s/message-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-worker
  namespace: messenger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-worker
  template:
    metadata:
      labels:
        app: message-worker
    spec:
      containers:
        - name: message-worker
          image: messenger/message-worker:latest
          imagePullPolicy: Never
